[package]
name = "axum-payment-service"
version = "0.1.0"
edition = "2021"

[dependencies]
payment-service-core = { path = "./generate-lib/lib" }
teaql-cloud-starter = { path = "../../teaql-rs/teaql-cloud-starter" }
teaql-cloud-core = { path = "../../teaql-rs/teaql-cloud-core" }
teaql-runtime = { path = "../../teaql-rs/teaql-runtime" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[patch.crates-io]
teaql-core = { path = "../../teaql-rs/teaql-core" }
teaql-macros = { path = "../../teaql-rs/teaql-macros" }
teaql-runtime = { path = "../../teaql-rs/teaql-runtime" }
teaql-sql = { path = "../../teaql-rs/teaql-sql" }
teaql-data-service = { path = "../../teaql-rs/teaql-data-service" }
teaql-provider-postgres = { path = "../../teaql-rs/teaql-provider-postgres" }
