[package]
name = "payment-service-core"
version = "0.1.0"
edition = "2021"
description = "Generated TeaQL service crate for payment-service"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teaql-core = "4.1.1"
teaql-macros = "4.1.1"
teaql-runtime = "4.1.1"
teaql-sql = "4.1.1"
teaql-data-service = "4.1.1"
teaql-tool-core = "1.0.0"
teaql-provider-postgres = "4.1.1"
tokio-postgres = { version = "0.7" }
deadpool-postgres = { version = "0.14.0", features = ["rt_tokio_1"] }
deadpool = "0.12"
tokio-util = "0.7"
deadpool-runtime = "0.1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
